La - Cadastro Fornecedor (parte 5)

--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -119,6 +119,7 @@
     <Content Include="Content\config\css\avaliar-star.css" />
     <Content Include="Content\config\css\bootstrap\main.css" />
     <Content Include="Content\config\css\bootstrap\util.css" />
+    <Content Include="Content\images\add-pdf.png" />
     <Content Include="Content\css\checkbox-home-logada.css" />
     <Content Include="Content\css\style_logada.css" />
     <Content Include="Content\config\fonts\flaticon\font\Flaticon.svg" />
@@ -144,6 +145,7 @@
     <Content Include="Content\css\navbar.css" />
     <Content Include="Content\css\style_login.css" />
     <Content Include="Content\images\about.jpg" />
+    <Content Include="Content\images\add-imagem-pequeno.png" />
     <Content Include="Content\images\add-imagem.png" />
     <Content Include="Content\images\avaliar.png" />
     <Content Include="Content\images\compradorIcon.png" />
@@ -171,6 +173,7 @@
     <Content Include="Content\images\phone.png" />
     <Content Include="Content\images\photo.png" />
     <Content Include="Content\images\ranking.png" />
+    <Content Include="Content\images\remove-pdf.png" />
     <Content Include="Content\images\search.png" />
     <Content Include="Content\images\servicos.png" />
     <Content Include="Content\images\Slide1.jpg" />
@@ -208,12 +211,12 @@
     <Content Include="Content\images\bg_3.jpg" />
     <Content Include="Content\images\bg_4.jpg" />
     <Content Include="Content\images\comprador.png" />
-    <Content Include="Content\images\give-money.png" />
+    <Content Include="Content\images\plano-premium.png" />
     <Content Include="Content\images\Login.png" />
     <Content Include="Content\images\LoginFornecedor.png" />
     <Content Include="Content\images\logo.png" />
     <Content Include="Content\images\logo2.png" />
-    <Content Include="Content\images\plano.png" />
+    <Content Include="Content\images\plano-free.png" />
     <Content Include="Content\images\image_1.jpg" />
     <Content Include="Content\images\image_2.jpg" />
     <Content Include="Content\images\image_3.jpg" />
