--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -392,6 +392,7 @@
     <None Include="Views\Comprador\Email.cshtml" />
     <Content Include="Views\HomeLogada\Perfil.cshtml" />
     <Content Include="Views\Fornecedor\UpdateFuncionarioFornecedor.cshtml" />
+    <Content Include="Views\HomeLogada\Suporte.cshtml" />
     <None Include="Views\Shared\Layout_logada.cshtml" />
     <Content Include="Web.config" />
   </ItemGroup>
