--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -237,6 +237,7 @@
     <Content Include="Content\images\person_4.jpg" />
     <Content Include="Content\images\planos.jpg" />
     <Content Include="Content\js\esqueceu-senha.js" />
+    <Content Include="Content\js\nova-senha.js" />
     <Content Include="Content\js\update.js" />
     <Content Include="Content\vendor\animate\animate.css" />
     <Content Include="Content\vendor\bootstrap\css\bootstrap-grid.css" />
@@ -545,7 +546,6 @@
     <Content Include="Views\Comprador\EsqueceuSuaSenha.cshtml" />
     <Content Include="Views\Comprador\UpdatePessoaFisica.cshtml" />
     <Content Include="Views\Comprador\UpdatePessoaJuridica.cshtml" />
-    <Content Include="Views\Comprador\UpdateSenha.cshtml" />
     <Content Include="Views\HomeLogada\RankingGeral.cshtml" />
     <Content Include="Views\config\css\.DS_Store" />
     <Content Include="Views\config\fonts\.DS_Store" />
