--- a/SupplierRanking/Web.config
+++ b/SupplierRanking/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <add name="SENAI" connectionString="SERVER=ESN509VMSSQL;Database=TCC_Laressa_Luiz_Marcelo_Valmir;User id=Aluno;Password=Senai1234"/>
-    <add name="VALMIR" connectionString="SERVER=DESKTOP-P4KIC71\\SQLEXPRESS;Database=TCC_Laressa_Luiz_Marcelo_Valmir;Trusted_Connection=True;"/>
+    <add name="VALMIR" connectionString="SERVER=DESKTOP-P4KIC71\SQLEXPRESS;Database=TCC_Laressa_Luiz_Marcelo_Valmir;Trusted_Connection=True;"/>
     <!--<add name="MARCELO" connectionString="AQUI VEM O NOME DO PC;Database=TCC_Laressa_Luiz_Marcelo_Valmir;Trusted_Connection=True;"/>-->
   </connectionStrings>
   <appSettings>
