--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -173,6 +173,7 @@
     <Content Include="Content\images\luizao.png" />
     <Content Include="Content\images\luizao2.png" />
     <Content Include="Content\images\luizao3.png" />
+    <Content Include="Content\images\mapa.png" />
     <Content Include="Content\images\marcelo255.png" />
     <Content Include="Content\images\olhoAberto.png" />
     <Content Include="Content\images\olhoFechado.png" />
