--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -419,6 +419,7 @@
     <Content Include="Views\HomeLogada\Suporte.cshtml" />
     <Content Include="Views\Comprador\UpdateSenha.cshtml" />
     <Content Include="Views\HomeLogada\RankingInteresses.cshtml" />
+    <Content Include="Views\Fornecedor\ExcluirContaFornecedor.cshtml" />
     <None Include="Views\Shared\Layout_logada.cshtml" />
     <Content Include="Web.config" />
   </ItemGroup>
